--- a/Web/AspNetCoreTemplate.Web/appsettings.json
+++ b/Web/AspNetCoreTemplate.Web/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AspNetCoreTemplate;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:vicovesqlserver.database.windows.net,1433;Initial Catalog=vicoveSqlDb;User Id=vicoveadmin@vicovesqlserver.database.windows.net;Password=juHY2yyKDOIsocAX;"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "665deb73-39a7-41b8-8af2-9f2f6d7c281d"
+  }
 }
