--- a/Data/AspNetCoreTemplate.Data/AspNetCoreTemplate.Data.csproj
+++ b/Data/AspNetCoreTemplate.Data/AspNetCoreTemplate.Data.csproj
@@ -38,6 +38,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.1" />
+    <PackageReference Include="SendGrid" Version="9.14.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.113" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
