Connection string changed to use localdb.

--- a/Web/AspNetCoreTemplate.Web/appsettings.json
+++ b/Web/AspNetCoreTemplate.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:vicovesqlserver.database.windows.net,1433;Initial Catalog=vicoveSqlDb;User Id=vicoveadmin@vicovesqlserver.database.windows.net;Password=juHY2yyKDOIsocAX;"
+    "DefaultConnection": "Server=localhost;Database=Vicove;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
