--- a/Data/AspNetCoreTemplate.Data/appsettings.json
+++ b/Data/AspNetCoreTemplate.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=AspNetCoreTemplate;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=Vicove;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
