Nai-Novi and Nai-populqrni views pagination fixed, Startup fixed and Content column is now nvarchar max in Vicove and VicForReview models.2

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,5 @@ MigrationBackup/
 appsettings.Production.json
 *.min.css
 *.min.js
+/Data/AspNetCoreTemplate.Data/appsettings.json
+/Web/AspNetCoreTemplate.Web/appsettings.json
